removed padding-top to fix alignment of text in square objects

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,6 @@ body {
     height: 7vw;
     font-size: min(7.5vw, 6.5vh);
     text-align: center;
-    padding-top: 1px;
     color: #00258b;
     font-weight: 500;
     font-family: 'Courier New', Courier, monospace;
